<resources>

    <string name="app_name">SpaceTrader</string>
    <string name="app_name_main">space\ntrader</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainMenu</string>
    <string name="title_activity_config">Configuration</string>
    <string name="hint_name">Your Name</string>
    <string name="txtview_name">Name</string>
    <string name="txtview_difficulty">Difficulty</string>
    <string name="txtview_remaining">Remaining Points:</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_start">START</string>
    <string name="difficulty_default">Easy</string>
    <string name="skill_stats">Skill Stats</string>
    <string name="skill_pilot">Pilot</string>
    <string name="skill_fighter">Fighter</string>
    <string name="skill_engineer">Engineer</string>
    <string name="skill_trader">Trader</string>
    <string name="pt_default">0</string>
    <string name="btn_test">Test</string>
    <string name="tab_map">Map</string>
    <string name="tab_info">Info</string>
    <string name="tab_market">Market</string>
    <string name="tab_hub">Hub</string>
    <string name="no_data">You do not have any saved data yet!</string>
    <string name="delete_save">Delete Saved Data</string>
    <string name="bt_newgame">new game</string>
    <string name="bt_resumegame">load game</string>
    <string name="bt_debugmode">debug mode</string>
    <string name="menu_save">Save Game</string>
    <string name="menu_load">Load Game</string>
    <string name="logo_desc">Space Trader</string>
    <string name="ship_desc">Ship Type A</string>

</resources>