<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_mainmenu"
        android:orientation="vertical"
        android:padding="@dimen/m32dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/m5dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/txtview_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".65"
                android:ems="10"
                android:hint="@string/hint_name" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/m5dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/txtview_difficulty"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".15"
                android:text="@string/btn_minus" />

            <TextView
                android:id="@+id/txtview_level"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".35"
                android:gravity="center"
                android:text="@string/difficulty_default"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".15"
                android:text="@string/btn_plus" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/m20dp"
            android:text="@string/skill_stats"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/m15dp"
                android:paddingRight="@dimen/m15dp"
                android:paddingTop="@dimen/m5dp" >

                <TextView
                    android:id="@+id/txtview_pilot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:padding="@dimen/m2dp"
                    android:text="@string/skill_pilot"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/bar_pilot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/pt_pilot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="@string/pt_default"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/m15dp"
                android:paddingRight="@dimen/m15dp"
                android:paddingTop="@dimen/m5dp" >

                <TextView
                    android:id="@+id/txtview_fighter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:padding="@dimen/m2dp"
                    android:text="@string/skill_fighter"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/bar_fighter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/pt_fighter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="@string/pt_default"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/m15dp"
                android:paddingRight="@dimen/m15dp"
                android:paddingTop="@dimen/m5dp" >

                <TextView
                    android:id="@+id/txtview_trader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:padding="@dimen/m2dp"
                    android:text="@string/skill_trader"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/bar_trader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/pt_trader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="@string/pt_default"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/m15dp"
                android:paddingRight="@dimen/m15dp"
                android:paddingTop="@dimen/m5dp" >

                <TextView
                    android:id="@+id/txtview_engineer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:padding="@dimen/m2dp"
                    android:text="@string/skill_engineer"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/bar_engineer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/pt_engineer"
                    android:layout_weight=".1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pt_default"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/m20dp" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/txtview_remaining"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtview_rm_pt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/m20dp"
            android:text="@string/btn_start"
             />

    </LinearLayout>

</LinearLayout>